# shellchat

./: LICENSE  README.md  pyproject.toml  requirements.txt
shellchat/: __main__.py  ai.py  app.py  config.py  shell.py
