[project]
name = "shellchat"
version = "0.1.0"
description = "A chat-style GUI for terminal — turn your shell into a ChatGPT-like experience"
authors = [{name = "Ramkrishna", email = "ramkrishna3245@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]

[project.scripts]
shellchat = "shellchat.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
