[project]
name = "shellchat"
version = "0.2.0"
description = "AI-powered chat-style terminal — type naturally, get shell commands"
authors = [{name = "Ramkrishna", email = "ramkrishna3245@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]

[project.scripts]
shellchat = "shellchat.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
